# company-project

./: README.md  diabetes_papers.csv  pyproject.toml
src/company_project/: get_papers_list.py  pubmed_api_client.py  xml_parser.py
